actualizacion de paginas html con css y javascritps

--- a/frontend/src/pages/login.html
+++ b/frontend/src/pages/login.html
@@ -55,11 +55,11 @@
 
                 <div class="row-between">
                     <div class="small">¿olvidaste tu contraseña?</div>
-                    <a href="#" class="link-muted">Recuperar</a>
+                    <a href="/frontend/src/pages/recup_contra.html" class="link-muted">Recuperar</a>
                 </div>
 
                 <div>
-                    <button type="submit" class="btn btn-primary">Iniciar sesión</button>
+                    <a href="/frontend/src/pages/dashboard-copy.html"><button type="submit" class="btn btn-primary">Iniciar sesión</button></a>
                 </div>
 
                 <div class="or">
@@ -70,10 +70,10 @@
 
                 <div>
                     <button type="button" id="googleBtn" class="btn btn-google">
-                        <span style="display:inline-flex;align-items:center;gap:10px">
+                        <a href="/frontend/src/pages/dashboard-copy.html"><span style="display:inline-flex;align-items:center;gap:10px">
                             <img src="https://www.svgrepo.com/show/355037/google.svg" alt="Google" style="width:18px;height:18px;filter:invert(1) contrast(120%);">
                             Iniciar sesión con Google
-                        </span>
+                        </span></a>
                     </button>
                 </div>
             </form>
