actualizacion del proyecto

--- a/frontend/src/pages/login.html
+++ b/frontend/src/pages/login.html
@@ -76,10 +76,17 @@
                         </span></a>
                     </button>
                 </div>
+
+                <div class="or">
+                    <div style="flex:1;height:1px;background:rgb(175, 250, 185)"></div>
+                    <div style="white-space:nowrap;padding:0 8px;color:#bcfcbf">Inventory Manager</div>
+                    <div style="flex:1;height:1px;background:rgb(175, 250, 185)"></div>
+                </div>
+
             </form>
         </div>
     </div>
 
     <script src="/frontend/src/scripts/login.js" defer></script>
 </body>
-</html>http://localhost:8000/
+</html>
