actualizacion del proyecto

--- a/frontend/src/pages/dashboard-copy.html
+++ b/frontend/src/pages/dashboard-copy.html
@@ -13,8 +13,8 @@
     <div>
       <h1>Inventory Manager</h1>
       <nav class="menu">
-        <img src="/frontend/src/assets/images/pago-en-linea.png" alt=""><a href="#">Ventas</a>
-        <img src="" alt=""><a href="#">Proveedores</a>
+        <img src="" alt=""><a href="#">Ventas</a>
+        <img src="" alt=""><a href="proveedores.html">Proveedores</a>
         <img src="" alt=""><a href="#">Productos</a>
         <img src="" alt=""><a href="#">Reportes</a>
       </nav>
@@ -23,6 +23,7 @@
       <img src="" alt=""><a href="#">Configuración</a>
       <img src="" alt=""><a href="#">Pagos</a>
       <img src="" alt=""><a href="#">Usuarios</a>
+      <button class="btn-logout" onclick="location.href='login.html'">Cerrar sesión</button>
     </div>
   </aside>
 
@@ -32,7 +33,7 @@
       <input type="text" placeholder="Buscar...">
     </div>
     <div class="user">
-      <img src="/frontend/src/assets/images/usuario.png" alt=""><strong>Fruver_Rosita</strong>
+      <img src="" alt=""><strong>Fruver_Rosita</strong>
     </div>
   </header>
 
